[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/player/weapon/Fusiles/Fusil de Asalto Militar/player_mfusil_rightt_arm.png" type="Texture" id=1]
[ext_resource path="res://assets/player/weapon/Gun.gd" type="Script" id=2]
[ext_resource path="res://assets/player/weapon/bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/player/weapon/AudioMFusilShot.gd" type="Script" id=4]
[ext_resource path="res://assets/player/weapon/Fusiles/Fusil de Asalto Militar/snd_mfusil_shot_v3.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/player/weapon/Particles/MuzzleFlash.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/player/weapon/Fusiles/Fusil de Asalto Militar/player_mfusil_left_arm.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "m4",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "m4",
"speed": 5.0
} ]

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )
bulletScene = ExtResource( 3 )
MuzzleFlash = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Position2D"]
position = Vector2( 12, 1 )
frames = SubResource( 1 )
animation = "m4"
__meta__ = {
"_edit_lock_": true
}

[node name="leftArm" type="AnimatedSprite" parent="Position2D"]
position = Vector2( 11, 1 )
z_index = -2
frames = SubResource( 2 )
animation = "m4"

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 21.3174, 0.485245 )

[node name="BulletSpawn" type="Position2D" parent="Muzzle"]
position = Vector2( -10.2775, -0.0331087 )

[node name="ShotCD" type="Timer" parent="."]

[node name="Sounds" type="Node2D" parent="."]

[node name="AudioMFusilShot" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -20.0
script = ExtResource( 4 )

[connection signal="timeout" from="ShotCD" to="." method="_on_ShotCD_timeout"]
